<resources>
    <string name="app_name">MoTS_Projekti</string>
    <string name="button_send">Send</string>
    <string name="send_message">send message</string>
    <string name="send_ika">Anna ikä</string>
    <string name="send_name">Your name</string>
    <string name="send_age">How old are you?</string>
    <string name="AnnaPituus">Height</string>
    <string name="bmi_pituus">pituus1</string>
    <string name="AnnaPaino">Weight</string>
    <string name="bmi_painoteksti">bmi_painoteksti</string>
    <string name="textvalue" />
    <string name="bmi_button">Check your BMI</string>
    <string name="SwitchBMI">BMI Calculator</string>
    <string name="sukupuoli_mies">Man</string>
    <string name="sukupuoli_nainen">Woman</string>
    <string name="gender">Gender: </string>
    <string name="weight_hint"> How much do you weigh..</string>
    <string name="height_hint"> How tall are you..</string>
    <string name="calculate_bmi">BMI</string>
    <string name="pituus_asetus">"Lenght: "</string>
    <string name="cm">in cm..</string>
    <string name="kg">in kg..</string>
    <string name="calcTest">Calculate</string>
    <string name="reset">Reset</string>
    <string name="b1">2,8% 330ml</string>
    <string name="b2">2,8% 500ml</string>
    <string name="b3">4,7% 330ml</string>
    <string name="b4">4,7% 500ml</string>
    <string name="b5">5,5% 330ml</string>
    <string name="b6">5,5% 500ml</string>
    <string name="b7">10-15% 24cl</string>
    <string name="b8">40% 4cl</string>
    <string name="alccalc">Alcohol Calc</string>
</resources>